[package]
name = "tafl"
version = "0.0.1-alpha.1"
authors = ["Elias Tandel <elias.tandel@gmail.com.br>"]
edition = "2018"

description = "An OpenTafl-compliant tafl AI"
readme = "README.md"
repository = "https://github.com/etandel/tafl"
license = "MIT OR Apache-2.0"
keywords = ["ai", "tafl", "games", "chess"]
categories = ["games", "parser-implementations"]

[profile.release]
opt-level = 3
lto = "thin"


[dependencies]
